# stretch_ros

./: stretch_ros.repos
hello_helpers/src/hello_helpers/: hello_misc.py
pick_place_demo/: CMakeLists.txt  package.xml
pick_place_demo/launch/: demo.launch.py  pick_place_demo.launch.py
pick_place_demo/rviz/: mtc.rviz
pick_place_demo/src/: pick_place_demo.cpp
pick_place_task/: CMakeLists.txt  package.xml
pick_place_task/src/: pick_place_task.cpp
stretch_core/: package.xml
stretch_core/config/: diagnostics.yaml
stretch_core/stretch_core/: action_exceptions.py  command_groups.py  joint_trajectory_server.py  stretch_diagnostics.py  stretch_driver.py  trajectory_components.py
stretch_moveit_config/config/: default_joint_limits.yaml  gripper.ros2_control.xacro  moveit_simple_controllers.yaml  ros_controllers.yaml  stretch_arm.ros2_control.xacro  stretch_description.srdf
stretch_moveit_config/launch/: demo.launch.py
