<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jafar@picknik.ai">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pick_place_task</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_core</depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
